--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "react-share": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
