--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
+    "axios": "^1.3.4",
     "highcharts": "^10.3.3",
     "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.2.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.2",
